[package]
name = "hydration-runtime-fuzzer"
version = "0.3.0"
description = "Fuzzer for the Hydration Runtime"
authors = ["GalacticCouncil"]
edition = "2021"
homepage = "https://github.com/galacticcouncil/hydration-fuzzers"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/hydration-fuzzers"

[dependencies]
ziggy = { version = "=1.2.1", default-features = false }
stats_alloc = "0.1.1"
static_init =  "=1.0.3"
toml = "0.5"
quinn-proto = { version = "0.9.6", features = ["arbitrary"] }

hex-literal = { workspace = true }
serde = { workspace = true, optional = true }
codec = { workspace = true }
scale-info = { workspace = true }
smallvec = { workspace = true }
log = { workspace = true }
num_enum = { workspace = true, default-features = false }
evm = { workspace = true, features = ["with-codec"] }

# local dependencies
primitives = { workspace = true }
hydradx-adapters = { workspace = true }
hydradx-traits = { workspace = true }
pallet-claims = { workspace = true }
pallet-genesis-history = { workspace = true }
pallet-omnipool = { workspace = true }
pallet-circuit-breaker = { workspace = true }
pallet-omnipool-liquidity-mining = { workspace = true }
pallet-dca = { workspace = true }
hydra-dx-math = { workspace = true }
pallet-dynamic-fees = { workspace = true }
pallet-dynamic-evm-fee = { workspace = true }
pallet-stableswap = { workspace = true }
pallet-bonds = { workspace = true }
pallet-lbp = { workspace = true }
pallet-xyk = { workspace = true }
pallet-referrals = { workspace = true }
pallet-broadcast = { workspace = true }
pallet-evm-accounts = { workspace = true }
pallet-evm-accounts-rpc-runtime-api = { workspace = true }
pallet-xyk-liquidity-mining = { workspace = true }
pallet-relaychain-info = { workspace = true }
pallet-transaction-multi-payment = { workspace = true, features = ["evm"] }
pallet-asset-registry = { workspace = true }
pallet-collator-rewards = { workspace = true }
pallet-currencies = { workspace = true }
pallet-currencies-rpc-runtime-api = { workspace = true }
pallet-ema-oracle = { workspace = true }
pallet-transaction-pause = { workspace = true }
pallet-duster = { workspace = true }
warehouse-liquidity-mining = { workspace = true }
pallet-otc = { workspace = true }
pallet-otc-settlements = { workspace = true }
pallet-route-executor = { workspace = true }
pallet-staking = { workspace = true }
pallet-liquidation = { workspace = true }
pallet-hsm = {workspace = true}

# pallets
pallet-bags-list = { workspace = true }
pallet-balances = { workspace = true }
pallet-conviction-voting = { workspace = true }
pallet-dispatcher = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-treasury = { workspace = true }
pallet-utility = { workspace = true }
pallet-aura = { workspace = true }
pallet-session = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-preimage = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-identity = { workspace = true }
pallet-collective = { workspace = true }
pallet-tips = { workspace = true }
pallet-proxy = { workspace = true }
pallet-multisig = { workspace = true }
pallet-referenda = { workspace = true }
pallet-democracy = { workspace = true }
pallet-elections-phragmen = { workspace = true }
pallet-uniques = { workspace = true }
pallet-whitelist = { workspace = true }
pallet-message-queue = { workspace = true }
pallet-state-trie-migration = { workspace = true }

# ORML dependencies
orml-tokens = { workspace = true }
orml-traits = { workspace = true }
orml-vesting = { workspace = true }
orml-benchmarking = { workspace = true, optional = true }

# orml XCM support
orml-xtokens = { workspace = true }
orml-xcm-support = { workspace = true }
orml-unknown-tokens = { workspace = true }
orml-xcm = { workspace = true }

# collator support
pallet-collator-selection = { workspace = true }
pallet-authorship = { workspace = true }

# Cumulus dependencies
cumulus-pallet-aura-ext = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-pallet-xcm = { workspace = true }
cumulus-pallet-xcmp-queue = { workspace = true }
cumulus-primitives-aura = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-utility = { workspace = true }
cumulus-primitives-parachain-inherent = { workspace = true }
cumulus-primitives-storage-weight-reclaim = { workspace = true }
cumulus-primitives-timestamp = { workspace = true }
staging-parachain-info = { workspace = true }
parachains-common = { workspace = true }

# Polkadot dependencies
polkadot-parachain = { workspace = true }
pallet-xcm = { workspace = true }
pallet-xcm-benchmarks = { workspace = true, optional = true }
polkadot-xcm = { workspace = true }
xcm-executor = { workspace = true }
xcm-builder = { workspace = true }
polkadot-runtime-common = { workspace = true }
xcm-runtime-apis = { workspace = true }

# Substrate dependencies
frame-benchmarking = { workspace = true, optional = true }
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-benchmarking = { workspace = true, optional = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-try-runtime = { workspace = true, optional = true }
frame-metadata-hash-extension = { workspace = true }
sp-api = { workspace = true }
sp-arithmetic = { workspace = true }
sp-block-builder = { workspace = true }
sp-genesis-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-externalities = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-staking = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
sp-trie = { workspace = true }
sp-io = { workspace = true }
primitive-types = { workspace = true }

# Frontier
fp-rpc = { workspace = true }
fp-evm = { workspace = true }
fp-self-contained = { workspace = true, features = ["serde"] }
pallet-ethereum = { workspace = true }
pallet-evm = { workspace = true }
pallet-evm-chain-id = { workspace = true }
pallet-evm-precompile-dispatch = { workspace = true }
pallet-evm-precompile-simple = { workspace = true }
pallet-evm-precompile-modexp = { workspace = true }
pallet-evm-precompile-bn128 = { workspace = true }
pallet-evm-precompile-blake2 = { workspace = true }
pallet-evm-precompile-call-permit = { workspace = true }
pallet-evm-precompile-flash-loan = { workspace = true }
precompile-utils = { workspace = true }
module-evm-utility-macro = { workspace = true }
ethabi = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true, default-features = false }


hydradx-runtime = { workspace = true}
scraper = { workspace = true }
runtime-mock = { workspace = true }
cumulus-test-relay-sproof-builder = { workspace = true }

[features]
default = ["std", "try-runtime"]
std = ["hydradx-runtime/std", "codec/std", "sp-runtime/std", "frame-support/std", "sp-consensus-aura/std"]
try-runtime = ["hydradx-runtime/try-runtime", "frame-support/try-runtime"]
