[package]
name = "runtime-mock"
version = "1.0.2"
description = "Mock of the HydraDX Runtime for testing purposes"
authors = ["GalacticCouncil"]
edition = "2021"
homepage = "https://github.com/galacticcouncil/HydraDX-node"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/HydraDX-node"

[dependencies]
serde = {  workspace = true }
toml = {  workspace = true }

# local dependencies
hydradx-runtime = { workspace = true }
hydradx-traits = { workspace = true }
primitives = { workspace = true }

# Substrate dependencies
frame-support = { workspace = true }
sp-io = { workspace = true }
sp-rpc = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
frame-remote-externalities = { workspace = true }

frame-system = { workspace = true }
pallet-asset-registry = { workspace = true }
pallet-omnipool = { workspace = true }
pallet-stableswap = { workspace = true }
pallet-staking = { workspace = true }

orml-tokens = { workspace = true }
scraper = { workspace = true}

[features]
default = ["std"]

std = [
"hydradx-runtime/std"
]
