[package]
name = "scraper"
version = "1.2.5"
description = "Scraper tool"
authors = ["GalacticCouncil"]
edition = "2021"
homepage = "https://github.com/galacticcouncil/HydraDX-node"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/HydraDX-node"

[dependencies]
codec = { workspace = true }
jsonrpsee = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
tokio = {workspace = true }

# local dependencies
hydradx-runtime = { workspace = true }

# Substrate dependencies
frame-support = { workspace = true }
sp-io = { workspace = true }
sp-rpc = { workspace = true }
sp-core = { workspace = true }
substrate-rpc-client = { workspace = true }
frame-remote-externalities = { workspace = true }

frame-system = { workspace = true }
pallet-balances = { workspace = true }

[features]
default= ["std"]

std = [
    "hydradx-runtime/std",
]