[package]
name = "scraper"
version = "1.3.0"
description = "Scraper tool"
authors = ["GalacticCouncil"]
edition = "2021"
homepage = "https://github.com/galacticcouncil/HydraDX-node"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/HydraDX-node"

[dependencies]
codec = { workspace = true }
jsonrpsee = { workspace = true, features = ["ws-client"] }
serde = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }

# local dependencies
hydradx-runtime = { workspace = true }
hydradx = { workspace = true }
sc-chain-spec = { workspace = true }
sc-service = { workspace = true }
indicatif = "0.17"

# Substrate dependencies
frame-support = { workspace = true }
sp-io = { workspace = true }
sp-rpc = { workspace = true }
sp-core = { workspace = true }
sp-trie = { workspace = true }
sp-state-machine = { workspace = true }
substrate-rpc-client = { workspace = true }
fp-rpc = { workspace = true }
frame-remote-externalities = { workspace = true }

frame-system = { workspace = true }
pallet-balances = { workspace = true }

serde_json = { version = "1.0", features = ["preserve_order"] }
hex = "0.4"
futures = "0.3.30"

[features]
default = ["std"]

std = [
    "hydradx-runtime/std",
]