[package]
name = "hydradx-traits"
version = "3.15.0"
description = "Shared traits"
authors = ["GalacticCouncil"]
edition = "2021"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/warehouse/tree/master/traits"

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }
impl-trait-for-tuples = { workspace = true }
sp-arithmetic = { workspace = true }

# Substrate dependencies
frame-support = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
    "serde/std",
    "codec/std",
    "frame-support/std",
    "sp-std/std",
]
