[package]
name = "ice-solver-bench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
hydradx-runtime = { workspace = true, features = ["std"] }
hydradx-traits = { workspace = true, features = ["std"] }
ice-solver = { workspace = true, features = ["std"] }
ice-support = { workspace = true, features = ["std"] }
amm-simulator = { workspace = true, features = ["std"] }
pallet-intent = { workspace = true, features = ["std"] }
pallet-ice = { workspace = true, features = ["std"] }
pallet-omnipool = { workspace = true, features = ["std"] }
pallet-ema-oracle = { workspace = true, features = ["std"] }
pallet-fee-processor = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
orml-traits = { workspace = true, features = ["std"] }
primitives = { workspace = true, features = ["std"] }
frame-support = { workspace = true, features = ["std"] }
frame-system = { workspace = true, features = ["std"] }
frame-remote-externalities = { workspace = true }
sp-core = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
codec = { workspace = true, features = ["std"] }
hex = { workspace = true, features = ["std"] }
tokio = { workspace = true }
criterion = { workspace = true }
log = { workspace = true, features = ["std"] }

[[bench]]
name = "solver"
harness = false

# Standalone continuous fuzzing/property-soak utility for the ICE solver +
# solution submission. Run manually, not in CI. See FUZZING.md.
[[bin]]
name = "ice-fuzz"
path = "src/bin/ice_fuzz.rs"
